feat: native integration tests (#167)
* chore: update backend to use new OpenVM traits + remove duplicate Chip

* chore: temporarily comment out tracegen modules

* feat: new traits for test harness + primitive + dummy chips (#135)

* fix: update backend examples to use new traits (#136)

* feat: SystemChipInventoryGPU with hybrid memory (#139)

* feat: new traits and test harness for rv32im (#141)

* new traits and test harness for rv32im

* feat: keccak impl new traits and test harness (#142)

* new traits and test harness for rv32im

* remove with_default from tester

* rename

* num_ops

* gen_pointer

* fix less than test

* keccak refactor and new test harness

* keccak vmproverextension

* lint

* reviewer comments

* reviewer comments

* feat: MemoryInventoryGPU + volatile memory in SystemChipInventoryGPU and GpuChipTester (#143)

* feat: MemoryInventoryGPU with TODOs

* feat: volatile memory in SystemChipInventoryGPU and GpuChipTester

* fix: memory dummy interaction chip tracegen bug

* fix: handle height-zero boundary chips

* chore: update personal TODOs with associated tickets

* feat: MemoryMerkleTree (#137)

* merkle tree kernels

* build

* kernels ready

* cuda.rs

* MemMerkleTree

* build tree

* small fix

* add comments

* more comments

* use backend's poseidon2_mix

* Resolve merge conflicts

* Cosmetic change

---------

Co-authored-by: Alexander Golovanov <Sample text>

* fix: make tests compile after rebase

* fix: unit tests (#148)

* try pass

* Fix, now works

---------

Co-authored-by: Alexander Golovanov <Sample text>

* feat: Add a `touchemall` feature for checking that the traces are fully filled (#150)

* Add a `touchemall` feature for checking that the traces are fully filled

* Fix codespell and lint

* ci: use new feature in tracegen ci

* put back release

---------

Co-authored-by: Alexander Golovanov <Sample text>
Co-authored-by: Jonathan Wang <31040440+jonathanpwang@users.noreply.github.com>

* fix: pass `timestamp_max_bits` i

--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -16,12 +16,10 @@ derive-new = { workspace = true }
 stark-backend-gpu = { workspace = true }
 openvm-stark-backend = { workspace = true }
 openvm-stark-sdk = { workspace = true }
-halo2curves-axiom = { workspace = true }
 num-traits = { workspace = true }
 
 # openvm
 openvm-circuit = { workspace = true }
-openvm-circuit-derive = { workspace = true }
 openvm-circuit-primitives = { workspace = true }
 openvm-instructions = { workspace = true }
 openvm-native-circuit = { workspace = true }
@@ -29,7 +27,6 @@ openvm-native-compiler = { workspace = true }
 openvm-rv32-adapters = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
 openvm-rv32im-transpiler = { workspace = true }
-openvm-rv32im-guest = { workspace = true }
 openvm-algebra-circuit = { workspace = true }
 openvm-algebra-transpiler = { workspace = true }
 openvm-mod-circuit-builder = { workspace = true }
@@ -38,7 +35,7 @@ openvm-ecc-transpiler = { workspace = true }
 openvm-keccak256-circuit = { workspace = true }
 openvm-poseidon2-air = { workspace = true }
 openvm-bigint-circuit = { workspace = true }
-openvm-pairing-guest = { workspace = true, features = ["bls12_381"] }
+# openvm-pairing-guest = { workspace = true, features = ["bls12_381"] }
 
 # p3
 p3-air = { workspace = true }
@@ -59,8 +56,6 @@ glob = { workspace = true }
 test-case = { workspace = true }
 itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
 openvm-circuit = { workspace = true, features = ["test-utils"] }
-openvm-toolchain-tests = { workspace = true }
-openvm-transpiler = { workspace = true }
 openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
 openvm-mod-circuit-builder = { workspace = true, features = ["test-utils"] }
 openvm-keccak256-transpiler = { workspace = true }
@@ -73,3 +68,6 @@ default = ["metrics"]
 metrics = ["openvm-circuit/metrics"]
 test-utils = ["openvm-circuit/test-utils"]
 touchemall = ["stark-backend-gpu/touchemall"]
+
+[package.metadata.cargo-shear]
+ignored = ["derive_more"]
