--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -26,7 +26,6 @@ openvm-native-circuit = { workspace = true }
 openvm-native-compiler = { workspace = true }
 openvm-rv32-adapters = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
-openvm-rv32im-transpiler = { workspace = true }
 openvm-algebra-circuit = { workspace = true }
 openvm-algebra-transpiler = { workspace = true }
 openvm-mod-circuit-builder = { workspace = true }
@@ -35,7 +34,6 @@ openvm-ecc-transpiler = { workspace = true }
 openvm-keccak256-circuit = { workspace = true }
 openvm-poseidon2-air = { workspace = true }
 openvm-bigint-circuit = { workspace = true }
-# openvm-pairing-guest = { workspace = true, features = ["bls12_381"] }
 
 # p3
 p3-air = { workspace = true }
@@ -43,10 +41,10 @@ p3-field = { workspace = true }
 p3-baby-bear = { workspace = true }
 p3-keccak-air = { workspace = true }
 
-serde = { workspace = true }
-num-bigint = "0.4"
-derive_more = { workspace = true }
-strum = { workspace = true }
+serde.workspace = true
+num-bigint.workspace = true
+derive_more.workspace = true
+strum.workspace = true
 
 [build-dependencies]
 cc = { workspace = true }
@@ -54,11 +52,13 @@ glob = { workspace = true }
 
 [dev-dependencies]
 test-case = { workspace = true }
-itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
+itertools = { workspace = true, features = ["use_std"] }
 openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
 openvm-mod-circuit-builder = { workspace = true, features = ["test-utils"] }
+openvm-rv32im-transpiler = { workspace = true }
 openvm-keccak256-transpiler = { workspace = true }
+openvm-pairing-guest = { workspace = true, features = ["bls12_381"] }
 strum = { workspace = true }
 eyre = { workspace = true }
 tracegen-gpu = { path = ".", features = ["test-utils"] }
