chore: clean up benchmarks
- Put all guest programs for benchmarks into a shared workspace so the
  local openvm imports are clearer.
- Switch all prove binaries to use the SdkVmConfig and parse it from
  openvm.toml

--- a/benchmarks/guest/base64_json/Cargo.toml
+++ b/benchmarks/guest/base64_json/Cargo.toml
@@ -1,11 +1,10 @@
-[workspace]
 [package]
-version = "0.1.0"
 name = "openvm-json-program"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
+openvm = { workspace = true, features = ["std"] }
 base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
 serde = { version = "1.0.214", default-features = false, features = ["derive"] }
 serde-json-core = "0.6.0"
