--- a/benchmarks/guest/bincode/Cargo.toml
+++ b/benchmarks/guest/bincode/Cargo.toml
@@ -1,11 +1,10 @@
-[workspace]
 [package]
 name = "openvm-bincode-program"
-version = "0.0.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
+openvm = { workspace = true, features = ["std"] }
 bincode = { version = "2.0.0-rc.3", default-features = false, features = [
     "derive",
     "alloc",
