--- a/benchmarks/guest/fibonacci_recursive/Cargo.toml
+++ b/benchmarks/guest/fibonacci_recursive/Cargo.toml
@@ -1,11 +1,10 @@
-[workspace]
 [package]
 name = "openvm-fibonacci-recursive-program"
-version = "0.0.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
+openvm = { workspace = true, features = ["std"] }
 
 [features]
 default = []
