--- a/examples/ecc/Cargo.toml
+++ b/examples/ecc/Cargo.toml
@@ -9,10 +9,10 @@ members = []
 [dependencies]
 openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
     "std",
-] }
-openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", features = ["ed25519"]}
-openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256" }
+], branch = "feat/remove-import-for-init" }
+openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/remove-import-for-init" }
+openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", features = ["ed25519"], branch = "feat/remove-import-for-init"}
+openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", branch = "feat/remove-import-for-init" }
 hex-literal = { version = "0.4.1", default-features = false }
 serde = { version = "1.0", default-features = false, features = [ "derive" ] }
 num-bigint = { version = "0.4.6", default-features = false }
