feat: GPU SDK (#173)
* feat: new sdk-gpu crate

* chore: update openvm circuit

* fix some names

* feat: port benchmarks to GpuSdk

* chore: typedef GpuSdk

* chore: fix ci

* fix: remove nightly features

* fix: FriReducedOpening kernel missing index by local_idx

* tmp: skip lde-on-demand benchmarks

* fix: field_expression_tracegen launch_params

* chore: delete unused vec_heap_two_reads and other small diffs with rust impl

* debug: run debugger in benchmark when debug_assertions

* chore: use __clz

* chore: rename output_vars -> vars for clarity

* auto-format

* feat(temp): use hybrid ecc prover extension

* fix: next_air for RangeTupleCheckerAir

* feat: hybrid ModularIsEqual

* feat: HybridFp2Chip and put back pairing benchmark

* fix: p3_keccak launch_params use 512

* chore: update openvm commit to fix backtrace error

* chore: delete Air defns from bigint

* temp: make hybrid int256 lessthan chip

* chore: update openvm for tracing

* chore: update guest Cargo.toml for correctness

--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -35,6 +35,7 @@ openvm-keccak256-circuit = { workspace = true }
 openvm-sha256-circuit = { workspace = true }
 openvm-poseidon2-air = { workspace = true }
 openvm-bigint-circuit = { workspace = true }
+openvm-pairing-circuit = { workspace = true }
 
 # p3
 p3-air = { workspace = true }
