--- a/extensions/native/circuit/Cargo.toml
+++ b/extensions/native/circuit/Cargo.toml
@@ -37,5 +37,6 @@ test-case.workspace = true
 
 [features]
 default = ["parallel"]
+#default = []
 parallel = ["openvm-circuit/parallel"]
 test-utils = ["openvm-circuit/test-utils"]
