--- a/guest-libs/verify_stark/Cargo.toml
+++ b/guest-libs/verify_stark/Cargo.toml
@@ -17,7 +17,7 @@ openvm-stark-sdk = { workspace = true }
 
 [dev-dependencies]
 openvm-sdk = { workspace = true }
-openvm-circuit = { workspace = true, features = ["parallel"] }
+openvm-circuit = { workspace = true, features = ["parallel", "perf-metrics"] }
 openvm-stark-sdk = { workspace = true }
 openvm-native-compiler.workspace = true
 openvm-verify-stark.workspace = true
