fix: unify mod-builder use of `BigUintGpu` and `OverflowInt` + various bug fixes (#191)
* chore: use __clz

* chore: rename output_vars -> vars for clarity

* auto-format

* fix: handle int_add edge cases

* chore: refactor for clarity

* chore: lint

* fix: reduce after EXPR_INPUT in compute

* refactor: remove limb ops, use biguint and overflowint structs

* wip

* refactor: do overflow stuff in place

* refactor: move carry calculation to overflowint

* fix: overflow max bits

* fix: proper support for small limbs

* fix: mu for small primes

* fix: use one host allocd buffer instead of malloc

* fix: bigint mod sub

* feat: add 48 limb unit test + vec heap fix

* chore: lint

* fix: from str in ecc

* nit: use int32 instead of int64 for consistency

* chore: use next_multiple_of

* chore: assert for carry

* chore: add assert in vec_heap router

---------

Co-authored-by: Jonathan Wang <31040440+jonathanpwang@users.noreply.github.com>

--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -47,6 +47,7 @@ serde.workspace = true
 num-bigint.workspace = true
 derive_more.workspace = true
 strum.workspace = true
+halo2curves-axiom.workspace = true
 
 [build-dependencies]
 cc = { workspace = true }
