fix(ci): temporarily trigger upload wf on push

--- a/.github/workflows/benchmarks-upload-fixtures.yml
+++ b/.github/workflows/benchmarks-upload-fixtures.yml
@@ -1,6 +1,9 @@
 name: "Upload benchmark fixtures"
 
 on:
+  push:
+    # TODO(ayush): remove
+    branches: ["feat/new-exec-e3-bench"]
   workflow_dispatch:
 
 env:
