--- a/.github/workflows/benchmarks-upload-fixtures.yml
+++ b/.github/workflows/benchmarks-upload-fixtures.yml
@@ -15,8 +15,8 @@ jobs:
     name: Generate and upload benchmark fixtures
     runs-on:
       - runs-on=${{ github.run_id }}
-      - family=m5a.xlarge # 2.5Ghz clock speed
-      - image=ubuntu24-full-x64
+      - runner=64cpu-linux-arm64
+      - family=m7
       - extras=s3-cache
 
     steps:
