--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -32,7 +32,9 @@ openvm-mod-circuit-builder = { workspace = true }
 openvm-ecc-circuit = { workspace = true }
 openvm-ecc-transpiler = { workspace = true }
 openvm-keccak256-circuit = { workspace = true }
+openvm-sha256-air = { workspace = true }
 openvm-sha256-circuit = { workspace = true }
+openvm-sha256-transpiler = { workspace = true }
 openvm-poseidon2-air = { workspace = true }
 openvm-bigint-circuit = { workspace = true }
 openvm-pairing-circuit = { workspace = true }
@@ -49,6 +51,9 @@ derive_more.workspace = true
 strum.workspace = true
 halo2curves-axiom.workspace = true
 
+hex = { workspace = true }
+bytemuck = { workspace = true }
+
 [build-dependencies]
 cc = { workspace = true }
 glob = { workspace = true }
@@ -61,6 +66,7 @@ openvm-rv32-adapters = { workspace = true, features = ["test-utils"] }
 openvm-mod-circuit-builder = { workspace = true, features = ["test-utils"] }
 openvm-rv32im-transpiler = { workspace = true }
 openvm-keccak256-transpiler = { workspace = true }
+openvm-sha256-transpiler = { workspace = true }
 openvm-pairing-guest = { workspace = true, features = ["bls12_381"] }
 strum = { workspace = true }
 eyre = { workspace = true }
