chore: update build dependencies to remote axiom-gpu

--- a/crates/circuits/poseidon2-air/Cargo.toml
+++ b/crates/circuits/poseidon2-air/Cargo.toml
@@ -17,9 +17,7 @@ zkhash = { workspace = true }
 
 openvm-stark-backend = { workspace = true }
 openvm-stark-sdk = { workspace = true }
-
-# TODO[stephenh]: Replace this with workspace declaration
-stark-backend-gpu = { path = "../../../../axiom-gpu/crates/backend", default-features = false, optional = true }
+stark-backend-gpu = { workspace = true, optional = true }
 
 rand.workspace = true
 lazy_static.workspace = true
