--- a/crates/circuits/primitives/Cargo.toml
+++ b/crates/circuits/primitives/Cargo.toml
@@ -11,6 +11,7 @@ license.workspace = true
 [dependencies]
 openvm-stark-backend = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
+stark-backend-gpu = { workspace = true, optional = true }
 
 rand.workspace = true
 derive-new.workspace = true
@@ -24,5 +25,6 @@ test-case.workspace = true
 openvm-stark-sdk = { workspace = true }
 
 [features]
-default = ["parallel"]
+default = ["parallel", "cuda"]
 parallel = ["openvm-stark-backend/parallel"]
+cuda = ["dep:stark-backend-gpu"]
