--- a/Cargo.toml
+++ b/Cargo.toml
@@ -172,6 +172,8 @@ openvm-verify-stark = { path = "guest-libs/verify_stark", default-features = fal
 # Benchmarking
 openvm-benchmarks-utils = { path = "benchmarks/utils", default-features = false }
 
+stark-backend-gpu = { path = "tracegen-gpu", default-features = false }
+
 # Plonky3
 p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb", default-features = false }
 p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb", default-features = false }
