--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -36,6 +36,13 @@ static_assertions.workspace = true
 getset.workspace = true
 dashmap.workspace = true
 
+[target.'cfg(feature = "cuda")'.dependencies]
+stark-backend-gpu.workspace = true
+
+[build-dependencies]
+glob = "0.3.3" # not a workspace dependency because to be moved to the build crate
+cc = "1.2.32"
+
 [target.'cfg(any(unix, windows))'.dependencies]
 memmap2.workspace = true
 [target.'cfg(target_os = "linux")'.dependencies]
@@ -74,3 +81,4 @@ mimalloc = ["openvm-stark-backend/mimalloc"]
 jemalloc = ["openvm-stark-backend/jemalloc"]
 jemalloc-prof = ["openvm-stark-backend/jemalloc-prof"]
 nightly-features = ["openvm-stark-sdk?/nightly-features"]
+cuda = []
