--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -55,12 +55,11 @@ openvm-rv32im-transpiler.workspace = true
 
 [features]
 default = ["parallel", "jemalloc", "cuda"]
-cuda = ["dep:stark-backend-gpu"]
-# cuda = [
-#    "dep:stark-backend-gpu",
-#    "openvm-circuit/cuda",
-#    "openvm-native-circuit/cuda",
-# ]
+cuda = [
+    "dep:stark-backend-gpu",
+    "openvm-circuit-primitives/cuda",
+    "openvm-poseidon2-air/cuda",
+]
 parallel = [
     "openvm-stark-backend/parallel",
     "dashmap/rayon",
