--- a/.github/workflows/publish-vocs.yml
+++ b/.github/workflows/publish-vocs.yml
@@ -50,7 +50,7 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_VOCS_PROJECT_ID }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         run: |
-          cd docs/vocs/docs
+          cd docs/vocs/
           mkdir .vercel
           echo "{\"projectId\":\"$VERCEL_PROJECT_ID\",\"orgId\":\"$VERCEL_ORG_ID\"}" > .vercel/project.json
           vercel --prod --token $VERCEL_TOKEN --yes
