fix: symlink snippets

--- a/.github/workflows/publish-vocs.yml
+++ b/.github/workflows/publish-vocs.yml
@@ -39,7 +39,9 @@ jobs:
 
       - name: Build docs
         run: |
-          cd docs/vocs/ && pnpm install --frozen-lockfile && pnpm build
+          cd docs/vocs/
+          ln -s docs/snippets/ snippets
+          pnpm install --frozen-lockfile && pnpm build
 
       - name: Install Vercel CLI
         run: npm install -g vercel
