don't delete convert_vkey bin

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -83,7 +83,7 @@ jobs:
           clean: false
 
       - name: Build tagged CLI
-        run: cargo install --force --locked --path crates/cli
+        run: cargo install --force --locked --path crates/cli --bin cargo-openvm
 
       - name: Run setup from tagged version
         run: |
