--- a/crates/circuits/primitives/Cargo.toml
+++ b/crates/circuits/primitives/Cargo.toml
@@ -11,7 +11,8 @@ license.workspace = true
 [dependencies]
 openvm-stark-backend = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
-stark-backend-gpu = { workspace = true, optional = true }
+openvm-cuda-backend = { workspace = true, optional = true }
+openvm-cuda-common = { workspace = true, optional = true }
 
 rand.workspace = true
 derive-new.workspace = true
@@ -24,7 +25,10 @@ tracing.workspace = true
 test-case.workspace = true
 openvm-stark-sdk = { workspace = true }
 
+[build-dependencies]
+openvm-cuda-builder.workspace = true
+
 [features]
 default = ["parallel", "cuda"]
 parallel = ["openvm-stark-backend/parallel"]
-cuda = ["dep:stark-backend-gpu"]
+cuda = ["dep:openvm-cuda-common", "dep:openvm-cuda-backend"]
