--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -39,7 +39,10 @@ jobs:
       - name: Build base branch CLI
         run: cargo install --force --locked --path crates/cli --bin cargo-openvm
       - name: Build converter
-        run: cargo install --force --locked --path crates/cli --bin convert_vkey
+        working-directory: crates/cli
+        run: |
+          cargo build --release --bin convert_vkey
+          mv ../../target/release/convert_vkey $HOME
 
       - name: Run setup from base branch and snapshot ~/.openvm
         run: |
@@ -115,7 +118,7 @@ jobs:
               # cargo openvm build --no-transpile
               mkdir -p "../../../tagged-outputs/benchmarks/$benchmark_name"
               cargo openvm keygen --output-dir "../../../tagged-outputs/benchmarks/$benchmark_name"
-              convert_vkey --path "../../../tagged-outputs/benchmarks/$benchmark_name/app.vk"
+              $HOME/convert_vkey --path "../../../base-outputs/benchmarks/$benchmark_name/app.vk"
               cd ../../..
             fi
           done
