--- a/crates/circuits/primitives/Cargo.toml
+++ b/crates/circuits/primitives/Cargo.toml
@@ -26,9 +26,9 @@ test-case.workspace = true
 openvm-stark-sdk = { workspace = true }
 
 [build-dependencies]
-openvm-cuda-builder = { workspace = true, optional = true }
+openvm-cuda-builder.workspace = true
 
 [features]
 default = ["parallel"]
 parallel = ["openvm-stark-backend/parallel"]
-cuda = ["dep:openvm-cuda-common", "dep:openvm-cuda-backend", "dep:openvm-cuda-builder"]
+cuda = ["dep:openvm-cuda-common", "dep:openvm-cuda-backend"]
