--- a/crates/circuits/primitives/Cargo.toml
+++ b/crates/circuits/primitives/Cargo.toml
@@ -29,6 +29,6 @@ openvm-stark-sdk = { workspace = true }
 openvm-cuda-builder.workspace = true
 
 [features]
-default = ["parallel", "cuda"]
+default = ["parallel"]
 parallel = ["openvm-stark-backend/parallel"]
 cuda = ["dep:openvm-cuda-common", "dep:openvm-cuda-backend"]
