update and fixes

--- a/crates/circuits/mod-builder/Cargo.toml
+++ b/crates/circuits/mod-builder/Cargo.toml
@@ -24,9 +24,9 @@ tracing.workspace = true
 itertools.workspace = true
 
 # CUDA dependencies (only included when cuda feature is enabled)
-stark-backend-gpu = { workspace = true, optional = true }
+openvm-cuda-backend = { workspace = true, optional = true }
+openvm-cuda-common = { workspace = true, optional = true }
 cuda-runtime-sys = { workspace = true, optional = true }
-openvm-cuda-common.workspace = true
 
 [build-dependencies]
 openvm-cuda-builder.workspace = true
@@ -40,7 +40,8 @@ openvm-circuit = { workspace = true, features = ["test-utils"] }
 [features]
 default = ["cuda"]
 cuda = [
-    "dep:stark-backend-gpu",
+    "dep:openvm-cuda-backend",
+    "dep:openvm-cuda-common",
     "dep:cuda-runtime-sys",
     "openvm-circuit-primitives/cuda",
 ]
