chore: add touchemall feature to cuda crates

--- a/crates/circuits/primitives/Cargo.toml
+++ b/crates/circuits/primitives/Cargo.toml
@@ -32,3 +32,4 @@ openvm-cuda-builder.workspace = true
 default = ["parallel"]
 parallel = ["openvm-stark-backend/parallel"]
 cuda = ["dep:openvm-cuda-common", "dep:openvm-cuda-backend"]
+touchemall = ["openvm-cuda-backend/touchemall"]
