chore: try CPU runner

--- a/.github/runs-on.yml
+++ b/.github/runs-on.yml
@@ -7,7 +7,11 @@ images:
     ami: "ami-040a96edd406c9478"
 
 runners:
-  gpu-small:
+  32cpu-arm64:
+    family: ["c7g.8xlarge"]
+    cpu: [32]
+    image: "ubuntu24-full-arm64"
+  gpu-small-x64:
     family: ["g6.xlarge", "g6.2xlarge"]
     cpu: [4, 8]
     image: "ubuntu24-gpu-x64"
