--- a/crates/circuits/mod-builder/Cargo.toml
+++ b/crates/circuits/mod-builder/Cargo.toml
@@ -38,7 +38,7 @@ halo2curves-axiom = { workspace = true }
 openvm-circuit = { workspace = true, features = ["test-utils"] }
 
 [features]
-default = ["cuda"]
+default = []
 cuda = [
     "dep:openvm-cuda-backend",
     "dep:openvm-cuda-common",
