--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -86,3 +86,39 @@ jobs:
         run: |
           cargo binstall --no-confirm --force cargo-audit
           cargo audit
+
+  lint-cuda:
+    name: Lint CUDA
+    runs-on:
+      - runs-on=${{ github.run_id }}
+      - family=g6.xlarge
+      - image=ubuntu24-gpu-x64
+      - extras=s3-cache
+
+    steps:
+      - uses: runs-on/action@v1
+      - uses: actions/checkout@v4
+
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          cache-on-failure: true
+
+      - name: Verify CUDA setup
+        run: |
+          nvidia-smi
+          nvidia-smi -L
+          nvcc --version
+          
+      - name: Run fmt
+        working-directory: crates
+        run: |
+          rustup install nightly
+          rustup component add --toolchain nightly rustfmt
+          cargo +nightly fmt --all -- --check
+
+      - name: Run clippy
+        run: |
+          # includes GPU specific features cuda and touchemall
+          cargo clippy --all-targets --all --tests --features "aggregation bls12_381 bn254 build-elfs cuda default entrypoint evm-prove evm-verify export-intrinsics export-libm function-span getrandom-unsupported halo2-compiler halo2curves heap-embedded-alloc jemalloc jemalloc-prof metrics nightly-features panic-handler parallel perf-metrics rust-runtime static-verifier std test-utils touchemall" -- -D warnings
+          cargo clippy --all-targets --all --tests --no-default-features --features "jemalloc jemalloc-prof" -- -D warnings
