--- a/.github/workflows/primitives.yml
+++ b/.github/workflows/primitives.yml
@@ -23,10 +23,16 @@ env:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        config:
+          - { family: "c7g.8xlarge", image: "ubuntu24-full-arm64" }
+          - { family: "g6.xlarge", image: "ubuntu24-gpu-x64" }
+
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=32cpu-linux-arm64
-      - image=ubuntu24-full-arm64
+      - family=${{ matrix.config.family }}
+      - image=${{ matrix.config.image }}
       - extras=s3-cache
 
     steps:
@@ -38,22 +44,40 @@ jobs:
           cache-on-failure: true
       - uses: taiki-e/install-action@nextest
 
+      - name: Set CPU tests environment variables
+        if: matrix.config.family != 'g6.xlarge'
+        run: |
+          echo "NEXTEST_ENV=" >> $GITHUB_ENV
+          echo "NEXTEST_ARGS=--cargo-profile fast --features parallel" >> $GITHUB_ENV
+
+      - name: Check CUDA status and set environment variables
+        if: matrix.config.family == 'g6.xlarge'
+        run: |
+          nvidia-smi
+          nvidia-smi -L
+          nvcc --version
+
+          echo "NEXTEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
+          echo "NEXTEST_ARGS=cuda --features parallel,cuda,touchemall" >> $GITHUB_ENV
+
       - name: Run tests for primitives
         working-directory: crates/circuits/primitives
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }} 
 
       - name: Run tests for poseidon2-air
         working-directory: crates/circuits/poseidon2-air
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }} 
 
       - name: Run tests for sha256-air
+        if: matrix.config.family != 'g6.xlarge'
         working-directory: crates/circuits/sha256-air
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
 
       - name: Run tests for mod-builder
+        if: matrix.config.family != 'g6.xlarge'
         working-directory: crates/circuits/mod-builder
         run: |
-          cargo nextest run --cargo-profile fast --features parallel
+          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
