--- a/Cargo.toml
+++ b/Cargo.toml
@@ -253,6 +253,9 @@ num-traits = { version = "0.2.19", default-features = false }
 ff = { version = "0.13.1", default-features = false }
 sha2 = { version = "0.10", default-features = false }
 
+# specific to CUDA and GPU
+cuda-runtime-sys = "0.3.0-alpha.1"
+
 # For local development. Add to your `.cargo/config.toml`
 # [patch."https://github.com/Plonky3/Plonky3.git"]
 # p3-field = { path = "../Plonky3/field" }
